# div_mod

./: .gitignore
by_modules/: README.md  div_mod.py  setup.cfg
by_packages/: LICENSE  README.md  setup.cfg
by_packages/src/div_mod_pkg/: __init__.py  div_mod_script.py
