[metadata]
name = div_mod_1234
version = 0.0.2
author = Jonn Doe
author_email = john.doe@test.com
description = A short discription.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guanglin-kuang/div_mod.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
package_dir =
    = src
scripts = 
    src/div_mod_pkg/div_mod_script.py

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    div-mod-example = div_mod_pkg:div_mod_example
